--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.8.1
 crispy-bootstrap4==2024.1
+dj-database-url==2.1.0
 Django==5.0.6
 django-crispy-forms==2.1
 django-debug-toolbar==4.3.0
+psycopg2==2.9.9
 sqlparse==0.5.0
+typing_extensions==4.11.0
 tzdata==2024.1
+whitenoise==6.6.0
