--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     env_file:
       - .env
     ports:
-      - "8000:8000"
+      - "8001:8000"
     volumes:
       - ./:/app
       - my_media:/files/media
@@ -13,19 +13,19 @@ services:
       sh -c "python manage.py wait_for_db &&
             python manage.py migrate &&
             python manage.py runserver 0.0.0.0:8000"
-      depends_on:
-      - db
+#      depends_on:
+#      - db
 
-  db:
-    image: postgres:16.0-alpine3.17
-    restart: always
-    env_file:
-      - .env
-    ports:
-      - "5432:5432"
-    volumes:
-      - my_db:/var/lib/postgresql/data
+#  db:
+#    image: postgres:16.0-alpine3.17
+#    restart: always
+#    env_file:
+#      - .env
+#    ports:
+#      - "5432:5432"
+#    volumes:
+#      - my_db:/var/lib/postgresql/data
 
 volumes:
-  my_db:
+#  my_db:
   my_media:
